--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@ opacity: 0;
     <h2>Credits</h2>
     <p>
         Creator: Monkey D. Goofy, simgagogo69, DoritoMan22 (yeah, all of those are me, i'm just one person) <br>
-      Join our Discord!: https://discord.gg/TAx4NSZY7c
+      Join our Discord!: https://discord.gg/TAx4NSZY7c (completely made up link, i just wanted to feel cool)
     </p>
   </div>
 </div>
