Update Discord link and modify links section

--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@ opacity: 0;
     <h2>Credits</h2>
     <p>
         Creator: Monkey D. Goofy, simgagogo69, DoritoMan22 (yeah, all of those are me, i'm just one person) <br>
-      Join our Discord!: https://discord.gg/TAx4NSZY7c (completely made up link, i just wanted to feel cool)
+      Join our <a href="https://discord.gg/TAx4NSZY7c" target="_blank">Discord</a>!
     </p>
   </div>
 </div>
@@ -1104,9 +1104,7 @@ opacity: 0;
   <div class="start-dropdown">
     <button class="start-dropbtn">Links ▼</button>
     <div class="start-dropdown-content">
-      <a href="https://discord.gg/TAx4NSZY7c" target="_blank">Discord</a>
-      <a href="https://github.com/" target="_blank">GitHub</a>
-      <a href="https://twitter.com/" target="_blank">Twitter</a>
+    <a href="https://simgagogo69.github.io/td/" target="_blank">re:deck COMMAND</a>
     </div>
   </div>
 </div>
