--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@ opacity: 0;
 </div>
 
   <div class="start-dropdown">
-    <button class="start-dropbtn">Links ▼</button>
+    <button class="start-dropbtn">More Games</button>
     <div class="start-dropdown-content">
     <a href="https://simgagogo69.github.io/td/" target="_blank">re:deck COMMAND</a>
     </div>
