--- a/index.html
+++ b/index.html
@@ -1101,8 +1101,8 @@ opacity: 0;
   </div>
 </div>
 
-  <div class="start-dropdown">
-    <button class="start-dropbtn">More Games</button>
+<div id="startDropdown" class="start-dropdown">
+  <button class="start-dropbtn">More Games</button>
     <div class="start-dropdown-content">
     <a href="https://simgagogo69.github.io/td/" target="_blank">re:deck COMMAND</a>
     </div>
