Fix dropdown ID in index.html

--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@ opacity: 0;
   </div>
 </div>
 
-<div id="startDropdown" class="start-dropdown">
+<div id="start-dropdown" class="start-dropdown">
   <button class="start-dropbtn">More Games</button>
     <div class="start-dropdown-content">
     <a href="https://simgagogo69.github.io/td/" target="_blank">re:deck COMMAND</a>
